package com.miras.post.exception;

public class ErrorMessages {
    public static final String ERROR_POST_NOT_FOUND = "Requested post does not exists";
    public static final String ERROR_USER_NOT_FOUND = "User does not exists";
    public static final String ERROR_USER_EXISTS = "User already exists with same email id";

    public static final String ERROR_POST_MODIFY_NOT_ALLOWED = "You are not allowed to modify this post";

}
