package com.miras.post.exception;

public class ResourceAlreadyExistsException extends RuntimeException {

    public ResourceAlreadyExistsException (String message) { super(message); }
}
